# mortgage-calc

./: calc.ipynb  mortgage_calc.py  pyproject.toml  test_mortgage_calc.py
mortgage_calc/: __mortgage.py  financial.py  simulation.py  test_financial.py  test_mortgage.py  test_simulation.py
