[tool.poetry]
name = "mortgage-calc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mortgage_calc"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
notebook = "^7.0.2"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
